[project]
name = "pokemon-agents"
version = "0.1.0"
description = "LLM-powered AI agents that play Pokémon Showdown autonomously"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.13.0",
    "json-repair>=0.59.4",
    "langfuse>=4.5.0",
    "litellm>=1.83.11",
    "poke-env>=0.15.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
packages = []